<resources>
    <string name="app_name">Heyow</string>
    <string name="app_name_cap">HEYOW</string>
    <string name="action_settings">Settings</string>
    <string name="my_google_api_key"><!-- REPLACE WITH YOUR OWN KEY --></string>
    <string name="my_legacy_server_key"><!-- REPLACE WITH YOUR OWN KEY --></string>
    <string name="facebook_app_id"><!-- REPLACE WITH YOUR OWN KEY --></string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="welcome_sub_text">Discover competition you loved</string>
    <string name="heyow_rights">Heyow. 2017. All right reserved</string>
    <string name="logout">Logout</string>
    <string name="address_dummy_text">Jalan Haji R. Rasuna Said, Kuningan Timur, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12950</string>

    <!-- Dummy data preview -->
    <string name="dummy_movie_genre">Family, Animation</string>
    <string name="dummy_match_title">Match Title</string>
    <string name="dummy_match_date">2016/09/18 @ 11:00</string>
    <string name="dummy_match_region">Jakarta, Indonesia</string>
    <string name="dummy_movie_desc">The short centers on a young sandpiper, the eponymous Piper, who is afraid of the water. She meets a young hermit crab who "teaches her the way of the waves".</string>

    <string name="you_are_offline">You are offline…</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm password</string>
    <string name="dialog_processing">Processing</string>
    <string name="dialog_please_wait">Please wait..</string>
    <string name="search">Search</string>
    <string name="more_options">More Options</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notifications">Notifications</string>
    <string name="category">Category</string>
    <string name="history">History</string>
    <string name="discover">Discover</string>
    <string name="on_my_place">On My Place</string>
    <string name="notification">Notification</string>
    <string name="title_activity_search_match">SearchMatchActivity</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="title_activity_post_match">PostMatchActivity</string>
    <string name="create_match">Create Match</string>
    <string name="add_match">Add Match</string>
    <string name="choose_location">Choose Location</string>
    <string name="account">Account</string>
    <string name="feed">Feed</string>
    <string name="near_me">Near Me</string>
    <string name="interest">Interest</string>
    <string name="popular">Popular</string>
    <string name="my_match">My Match</string>
    <string name="match">Match</string>
    <string name="created_match">Created Match</string>
    <string name="joined_match">Joined Match</string>
    <string name="location">Location</string>
    <string name="search_match">Search Match</string>
    <string name="current_location">Current Location</string>
    <string name="match_title">Match Title</string>
    <string name="date">Date</string>
    <string name="starting_time">Starting Time</string>
    <string name="max_number_of_people">Max Number of People</string>
    <string name="next">Next</string>
    <string name="description">Description</string>
    <string name="try_again">Try Again</string>
    <string name="overview">Overview</string>
    <string name="match_detail">Match Detail</string>
    <string name="join_match">Join Match</string>
    <string name="venue">Venue</string>
    <string name="test">Test</string>
    <string name="create">Create</string>
    <string name="share">Share</string>
    <string name="venue_name">Venue Name</string>
    <string name="venue_details">Venue Details</string>
    <string name="venue_address">Venue Address</string>
    <string name="venue_area">Venue Area</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="must_be_filled">Must be filled!</string>
    <string name="click_for_detail">Click for Detail</string>
    <string name="location_detail">Location Detail</string>

    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="click_to_add_address">Click to add Address</string>
    <string name="not_selected_yet">Not selected yet</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="radius_km_text">KM</string>
    <string name="participants">Participants</string>
    <string name="player_quota">Player Quota</string>

    <string-array name="match_category">
        <item>-- Choose Category --</item> <!-- 0 -->
        <item>Athletic</item> <!-- 1 -->
        <item>Badminton</item> <!-- 2 -->
        <item>Baseball</item> <!-- 3 -->
        <item>Basketball</item> <!-- 4 -->
        <item>Billiard</item> <!-- 5 -->
        <item>Chess</item> <!-- 6 -->
        <item>Cricket</item> <!-- 7 -->
        <item>Game</item> <!-- 8 -->
        <item>Hockey</item> <!-- 9 -->
        <item>Soccer</item> <!-- 10 -->
        <item>Swimming</item> <!-- 11 -->
        <item>Tennis</item> <!-- 12 -->
        <item>Volleyball</item> <!-- 13 -->
    </string-array>
    <string name="title_activity_match_chat">MatchChatActivity</string>
    <string name="write_a_message_dot_dot">Write a message…</string>
    <string name="keywords">Keywords</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_discover_match">DiscoverMatchActivity</string>
    <string name="title_activity_location_radius">LocationRadiusActivity</string>
    <string name="selected_location">Selected Location</string>
    <string name="type_here_for_location">Type here for location</string>
    <string name="my_current_location">My Current Location</string>
    <string name="current_location_desc">Click to getting match from your current location</string>
    <string name="title_activity_joined_match">JoinedMatchActivity</string>
    <string name="title_activity_created_match">CreatedMatchActivity</string>
    <string name="distance">Distance</string>
    <string name="find_a_location">Find a location…</string>
    <string name="search_a_location">Select a Location</string>
    <string name="players">Players</string>
    <string name="remaining">remaining</string>
    <string name="couldnt_refresh_feed">Could not refresh feed</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_results_found">No results found</string>
    <string name="done">Done</string>
    <string name="title_activity_other_user">OtherUserActivity</string>
    <string name="leave_match">Leave Match</string>
    <string name="title_activity_choose_interest">ChooseInterestActivity</string>
    <string name="select_3_or_more_interest">Select 3 or more interest</string>
    <string name="my_interest">My Interest</string>
    <string name="tell_us_what_you_interest">Tell us what you interest</string>
    <string name="title_activity_search_results">SearchResultsActivity</string>
    <string name="title_activity_edit_match">EditMatchActivity</string>
    <string name="save">Save</string>
    <string name="edit_match">Edit Match</string>
    <string name="delete_match">Delete Match</string>
    <string name="title_activity_add_new_match">AddNewMatchActivity</string>
    <string name="desc_editor_hint">Match description…</string>
</resources>
