<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/list_drawer_1"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_created_match"
            android:title="@string/created_match"
            android:icon="@drawable/ic_note_plus_24dp"/>

        <item
            android:id="@+id/nav_joined_match"
            android:title="@string/joined_match"
            android:icon="@drawable/ic_arrow_compress_all_24dp"/>
    </group>

    <group
        android:id="@+id/list_drawer_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_account"
            android:title="@string/account"
            android:icon="@drawable/ic_account_24dp"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout_24dp"/>
    </group>
</menu>