<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/match_list_2_parent_layout"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="horizontal"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/match_list_2_poster_image"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:background="@color/color_grey_400"
            android:contentDescription="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/match_list_2_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_match_title"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/match_list_2_category_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:textColor="@color/color_black"
            android:textSize="12sp"
            android:textAllCaps="true"/>

        <TextView
            android:id="@+id/match_list_2_datetime_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_match_date"
            android:textColor="@color/color_black"
            android:textSize="12sp"
            android:textStyle="italic"/>

    </LinearLayout>

</LinearLayout>