<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/background_clickable_1"
    android:clickable="true"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/movie_poster_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_gravity="center"
            android:background="@color/color_grey_400"
            android:contentDescription="@null" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#3000"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="#5000"
                android:padding="5dp"
                android:text="@string/category"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/color_white"/>

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/movie_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_match_title"
            android:textColor="@color/color_black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:ellipsize="end"/>

        <TextView
            android:id="@+id/movie_year_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_match_date"
            android:textColor="@color/color_black"
            android:textSize="14sp"
            android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="end"
            android:orientation="horizontal"
            app:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_map_marker_24dp"
                android:contentDescription="@null"/>

            <TextView
                android:id="@+id/movie_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/dummy_match_region"
                android:textColor="@color/color_black"
                android:textSize="12sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>