<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.skripsigg.heyow.ui.auth.AuthActivity"
    tools:showIn="@layout/activity_auth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/auth_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textAllCaps="true"
            android:textColor="@color/color_white"
            android:text="@string/app_name_cap"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:textColor="@color/color_white"
            android:text="@string/welcome_sub_text"
            app:fontFamily="roboto"
            app:typeface="roboto_bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_gravity="bottom|center_horizontal">

        <!--<Button
        android:id="@+id/facebook_login_button"
        android:text="@string/login_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_above="@+id/google_login_button"
        android:layout_centerHorizontal="true"
        android:background="@color/facebook_button_color"
        android:textColor="@color/color_white"
        android:onClick="onFacebookLoginClick"
        android:textStyle="bold" />-->

        <Button
            android:id="@+id/google_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center"
            android:background="@drawable/button_google_bg"
            android:textColor="@color/color_white"
            android:text="@string/sign_in_with_google"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
